--- a/css/style.css
+++ b/css/style.css
@@ -90,7 +90,8 @@ header {
 /*******************
     Filtres
 *******************/
-   main {
+
+main {
     padding-top: 100px
 }
 
@@ -145,6 +146,10 @@ header {
     color: white;
 
 }
+.btn i {
+    display: none;
+}
+
 .data_filter {
     display: flex;
     flex-wrap: wrap;
@@ -254,10 +259,7 @@ header {
     height: auto;
     padding: 1% 1% 0 1%;
     border-radius: 15px 15px;
-
-
-
-    box-shadow: 0px 8px #e5e2e2;
+    box-shadow: 0px 4px #cccccc;
 }
 
 .image_lodging1, .image_lodging2, .image_lodging3,.image_lodging4,
@@ -401,33 +403,33 @@ header {
     justify-content: space-between;
 }
 
-.bloc1, .bloc2 {
+.bloc_cards_activity {
     width: 46%;
     display: flex;
     flex-direction: column;
     justify-content: space-between;
 }
 
-.cards2, .cards4 {
+.cards_activity_1 {
     width: 46%;
     border-radius: 20px;
     border: 3px solid transparent;
     box-shadow: 0px 4px #e5e2e2;
 }
-.cards3, .cards5 {
+.cards_activity_2 {
     width: 100%;
     border: 3px solid transparent;
     border-radius: 15px;
     box-shadow: 0px 4px #e5e2e2;
 }
 
-.card-info2 {
+.card_activity_info {
     height: 60px;
     display: flex;
     align-items: center;
 }
 
-.card-image10, .card-image13 {
+.image_activity_1, .image_activity_2 {
     background-size: cover;
     background-position: center;
     width: 100%;
@@ -435,18 +437,16 @@ header {
     border-radius: 15px 15px 0 0 ;
 }
 
-.card-image10 {
+.image_activity_1 {
     background-image: url('../images/activites/3_medium/reno-laithienne-QUgJhdY5Fyk-unsplash.jpg');
 
 } 
 
-.card-image13 {
+.image_activity_2 {
     background-image: url('../images/activites/3_medium/kilyan-sockalingum-NR8-cBCN3aI-unsplash.jpg');
 } 
 
-
-
-.card-image11, .card-image14 {
+.image_activity_3, .image_activity_4 {
     background-size: cover;
     background-position: center;
     width: 100%;
@@ -454,14 +454,14 @@ header {
     border-radius: 15px 15px 0 0;
 }
 
-.card-image11 {
+.image_activity_3 {
     background-image: url('../images/activites/3_medium/paul-hermann-QFTrLdQIRhI-unsplash.jpg');    
 }  
-.card-image14 {
+.image_activity_4 {
     background-image: url('../images/activites/3_medium/florian-wehde-xW9e8gdotxI-unsplash.jpg');
 }      
 
-.card-image12, .card-image15 {
+.image_activity_5, .image_activity_6 {
     background-size: cover;
     background-position: center;
     width: 100%;
@@ -469,11 +469,11 @@ header {
     border-radius: 15px 15px 0 0;
 }
 
-.card-image12 {
+.image_activity_5 {
     background-image: url('../images/activites/3_medium/kevin-hikari-rV_Qd1l-VXg-unsplash.jpg');
 } 
 
-.card-image15 {
+.image_activity_6 {
     background-image: url('../images/activites/3_medium/lena-paulin-wH2-EJoDcV0-unsplash.jpg');
 }  
 
