--- a/css/style.css
+++ b/css/style.css
@@ -77,7 +77,7 @@ header {
 }
   
 #auth_container {
-    width: 150px;
+    width: 100px;
     display: flex;
     justify-content: center;
     align-items: center;
@@ -99,9 +99,13 @@ main {
     margin:0 15px;
 }
 
+h1 {
+    margin-bottom: 15px;
+}
+
 .search_filter p {
     font-weight: 900;
-    font-size: 15px;
+    font-size: 16px;
     color: #6c757d;
 }
 
@@ -192,25 +196,27 @@ main {
 
 .info {
     display: flex;
-    
+    flex-direction: row;
     margin-top: 35px;
 }
 
 .info_icon {
     margin-right: 15px;
-    border-radius: 50px;
-    border: 2px solid #e5e2e2;
+
+}
+.info p {
+    padding: 0;
 }
 
 .fa-info {
     font-size: 15px;
-    padding: 10px 15px;
+    padding: 5px 10px;
     color: #0065FC;
+    border-radius: 50px;
+    border: 2px solid #e5e2e2;
 }
 
-.info p {
-    padding-top: 15px;
-}
+
 
 /*******************
     hebergement
@@ -230,44 +236,46 @@ main {
     border-radius: 10px;
     display: flex;
     flex-direction: column;
-    padding: 35px;
+    justify-content: space-between;
+    padding: 35px 15px;
 }
 
 .container_lodging {
     display: flex;
-    flex-wrap: wrap;
     justify-content: space-between;
-    margin: 15px 0;
+    flex-wrap: wrap;
 }
 
 .cards_lodging {
-    width: 30%;
-    padding: 25px 0;
-    
+    width: 32%;
+    padding: 15px 0;
+    border-radius: 20px;
 }
 
 .card_info_lodging {
-    height: 100px;
+    height: 110px;
     display: flex;
     flex-direction: column;
     justify-content: center;
-    border-radius: 15px 15px;
+   
 }
 
 .card_lodging_item {
     background-color: white;
     height: auto;
     padding: 1% 1% 0 1%;
-    border-radius: 15px 15px;
-    box-shadow: 0px 4px #cccccc;
+    border-radius: 20px;
+  border: 1px solid transparent;
+  box-shadow: 0px 0px 6px 0px #0000002e;
 }
 
 .image_lodging1, .image_lodging2, .image_lodging3,.image_lodging4,
 .image_lodging5, .image_lodging6 {
     background-size: cover;
     background-position: center;
+    object-fit: cover;
     width: 100%;
-    height: 200px;
+    height: 180px;
     border-radius: 15px 15px 0 0;
 }
 
@@ -321,7 +329,7 @@ main {
     border-radius: 10px;
     display: flex;
     flex-direction: column;
-    padding: 25px;
+    padding: 25px 15px;
 }
 
 .title_popular {
@@ -363,7 +371,7 @@ main {
     background-size: cover;
     background-position: center;
     width: 40%;
-    height: 200px;
+    height: 190px;
     border-radius: 15px 0 0 15px;
 }
 
