--- a/css/style.css
+++ b/css/style.css
@@ -232,18 +232,17 @@ h1 {
     flex: 2;
     margin-right: 15px;
     background-color: #e5e2e2;
-    
     border-radius: 10px;
     display: flex;
     flex-direction: column;
-    justify-content: space-between;
     padding: 35px 15px;
 }
 
 .container_lodging {
     display: flex;
-    justify-content: space-between;
     flex-wrap: wrap;
+    justify-content: space-between;
+    margin: 15px 0;
 }
 
 .cards_lodging {
@@ -253,7 +252,7 @@ h1 {
 }
 
 .card_info_lodging {
-    height: 110px;
+    height: 100px;
     display: flex;
     flex-direction: column;
     justify-content: center;
@@ -263,20 +262,18 @@ h1 {
 .card_lodging_item {
     background-color: white;
     height: auto;
-    padding: 1% 1% 0 1%;
     border-radius: 20px;
-  border: 1px solid transparent;
-  box-shadow: 0px 0px 6px 0px #0000002e;
+    border: 4px solid transparent;
+    box-shadow: 0px 0px 10px 0px #0000002e;
 }
 
 .image_lodging1, .image_lodging2, .image_lodging3,.image_lodging4,
 .image_lodging5, .image_lodging6 {
     background-size: cover;
     background-position: center;
-    object-fit: cover;
     width: 100%;
     height: 180px;
-    border-radius: 15px 15px 0 0;
+    border-radius: 20px 20px 0 0;
 }
 
 .image_lodging1 {
@@ -327,8 +324,7 @@ h1 {
     margin-left: 15px;
     background-color: #e5e2e2;
     border-radius: 10px;
-    display: flex;
-    flex-direction: column;
+
     padding: 25px 15px;
 }
 
@@ -341,6 +337,7 @@ h1 {
 .container_popular {
     display: flex;
     flex-direction: column;
+    justify-content: space-between;
     padding: 15px 0;
 }
 .cards_popular {
@@ -356,8 +353,10 @@ h1 {
     flex-wrap: wrap;
     background-color: white;
     height: auto;
-    padding: 1% 1% 1% 1%;
-    border-radius: 15px 15px;
+    padding: 2px 2px;
+    border-radius: 20px;
+    border: 1px solid transparent;
+    box-shadow: 0px 0px 10px 0px #0000002e;
 }
 .card_info_popular {
     width: 50%;
@@ -371,8 +370,8 @@ h1 {
     background-size: cover;
     background-position: center;
     width: 40%;
-    height: 190px;
-    border-radius: 15px 0 0 15px;
+    height: 180px;
+    border-radius: 20px 0 0 20px;
 }
 
 .image_popular_1{
@@ -396,7 +395,7 @@ h1 {
 *******************/
 
 #activity {
-    margin: 100px 15px;
+    margin: 60px 15px;
 }
 
 .activity {
@@ -421,16 +420,17 @@ h1 {
 .cards_activity_1 {
     width: 46%;
     border-radius: 20px;
-    border: 3px solid transparent;
-    box-shadow: 0px 4px #e5e2e2;
-}
-.cards_activity_2 {
-    width: 100%;
-    border: 3px solid transparent;
-    border-radius: 15px;
-    box-shadow: 0px 4px #e5e2e2;
+    border: 4px solid transparent;
+    box-shadow: 0px 0px 10px 0px #0000002e;
 }
 
+.cards_activity_2 {
+    width: 100%;
+    border-radius: 20px;
+    border: 4px solid transparent;
+    box-shadow: 0px 0px 10px 0px #0000002e;
+}
+ 
 .card_activity_info {
     height: 60px;
     display: flex;
