--- a/css/responsive.css
+++ b/css/responsive.css
@@ -250,12 +250,18 @@
         justify-content: center;
     }
 }
- 
- /* Sur tous types d'écran, quand la largeur de la fenêtre est comprise entre 1024px et 1280px */
- @media all and (min-width: 1024px) and (max-width: 1280px){}
- 
- /* Sur les téléviseurs */
- @media tv {}
- 
- /* Sur tous types d'écrans orientés verticalement */
- @media all and (orientation: portrait) {}
+
+@media screen and (max-width: 350px) {
+    .search_lodging {
+        height: 35px;
+        max-width: 140px;
+        font-size: 15px;
+    }
+    .icon_map {
+        width:35px;
+        height: 35px;
+    }
+    .btn i {
+        padding: 0 10px;
+    }
+}
