--- a/css/style.css
+++ b/css/style.css
@@ -5,6 +5,7 @@
 }
 
 body {
+   
 	color: #212529;									
 	cursor: default;								
 	width: 100%;					
@@ -20,12 +21,17 @@ a {
 header {
     width: 100%;
     height: 100px;
-    display: flex;
-    justify-content: space-between;
-    align-items: center;
     position: fixed;
     z-index: 1;
     background-color: white;
+}
+
+.header {
+    max-width: 1500px;
+    margin: auto;
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
 }
   
   /*******************
@@ -68,7 +74,6 @@ header {
 .nav_link {
     color: #6c757d ;
 	font-size: 15px;
-	font-weight: 500;
 }
 
 .nav_link.active {
@@ -87,8 +92,8 @@ header {
  
 }
 #auth_container a {
-      color:#0065FC;
-      font-weight: bold;
+    color:#0065FC;
+    font-weight: bold;
 }
 
 /*******************
@@ -97,7 +102,8 @@ header {
 
 main {
     padding-top: 100px;
-    margin-left: 25px;
+    max-width: 1500px;
+    margin: auto;
 }
 
 .search_filter {
@@ -258,7 +264,7 @@ h1 {
 }
 
 .cards_lodging:hover {  
-    transform: translate3d(4px, 4px, 3em);
+    transform: scale(1.1);
 }
 
 .card_info_lodging {
@@ -358,7 +364,7 @@ h1 {
 }
 
 .cards_popular:hover {  
-    transform: translate3d(4px, 4px, 3em);
+    transform: scale(1.1);
 }
 
 .fa-chart-line {
@@ -436,7 +442,7 @@ h1 {
 }
 
 .cards_activity_1:hover , .cards_activity_2:hover {
-    transform: translate3d(4px, 4px, 3em);
+    transform: scale(1.1);
     cursor: pointer;
 } 
 
@@ -520,7 +526,8 @@ footer {
 .footerbloc {
     height: 250px;
     margin-top: 100px;
-    margin-left: 25px;
+    max-width: 1500px;
+    margin: auto;
     display: flex;
     justify-content: space-between;
 }
