--- a/css/style.css
+++ b/css/style.css
@@ -264,7 +264,7 @@ h1 {
 }
 
 .cards_lodging:hover {  
-    transform: scale(1.1);
+    transform: scale(1.03);
 }
 
 .card_info_lodging {
@@ -364,7 +364,7 @@ h1 {
 }
 
 .cards_popular:hover {  
-    transform: scale(1.1);
+    transform: scale(1.03);
 }
 
 .fa-chart-line {
@@ -428,21 +428,21 @@ h1 {
 }
 
 .container_activity_1, .container_activity_2{
-    margin: 15px 0;
-    width: 48%;
+    margin-top: 35px;
+    width: 49%;
     display: flex;
     justify-content: space-between;
 }
 
 .bloc_cards_activity {
-    width: 46%;
+    width: 50%;
     display: flex;
     flex-direction: column;
     justify-content: space-between;
 }
 
 .cards_activity_1:hover , .cards_activity_2:hover {
-    transform: scale(1.1);
+    transform: scale(1.03);
     cursor: pointer;
 } 
 
