--- a/css/responsive.css
+++ b/css/responsive.css
@@ -22,6 +22,7 @@
         display: flex;
         flex-direction: row;
         justify-content: space-between;
+
         padding: 0 15px;
     }
 
@@ -138,9 +139,9 @@
     }
     .navbar {
         width: 100%;
-        height: 60px;
+        height: 50px;
         position: absolute;
-        top: 60px;
+        top: 70px;
         left: 0;
         background-color: white;
     }
@@ -173,13 +174,19 @@
         padding: 0px 15px;
         color: white;
     }
+
     .filter_text_icon {
         margin-top: 10px;
+    }
+
+    .info_icon {
+        margin-right: 5px;
     }
 
     .lodging {
         flex-direction: column-reverse;
         margin: 0;
+        margin-top: 15px;
     }
     .size_lodging {
         margin-right: 0;
@@ -212,6 +219,7 @@
         flex-direction: column;
     }
     .container_activity_1, .container_activity_2 {
+        margin-top: 0;
         width: 100%;
         display: flex;
         flex-direction: column;
