--- a/css/style.css
+++ b/css/style.css
@@ -203,7 +203,7 @@ h1 {
     align-items: center;
     padding: 5px 15px;
     font-size: 18px;
-    font-weight: 900;
+    font-weight: bold;
     color: black;
 }
 
@@ -218,7 +218,7 @@ h1 {
 
 }
 .info p {
-    padding: 0;
+    padding-top : 5px;
 }
 
 .fa-info {
@@ -237,6 +237,7 @@ h1 {
 
 
 .lodging {
+    margin-top: 30px;
     display: flex;
     flex-wrap: wrap;
     justify-content: space-between;
