--- a/css/responsive.css
+++ b/css/responsive.css
@@ -268,3 +268,17 @@
     }
 }
 
+@media all and (max-width: 290px) {
+    .card_popular_item {
+        flex-direction: column;
+    }
+
+    .image_popular_1, .image_popular_2, .image_popular_3 {
+        width: 100%;
+        border-radius: 20px 20px 0 0;
+    }
+
+    .card_info_popular {
+        width: 100%;
+    }
+}
