--- a/css/style.css
+++ b/css/style.css
@@ -268,6 +268,7 @@ h1 {
 
 .cards_lodging:hover {  
     transform: scale(1.03);
+    
 }
 
 .card_info_lodging {
@@ -285,7 +286,7 @@ h1 {
     height: auto;
     border-radius: 20px;
     border: 4px solid transparent;
-    box-shadow: 0px 0px 10px 0px #0000002e;
+    box-shadow: 4px 4px 16px #0000002e;
 }
 
 .image_lodging1, .image_lodging2, .image_lodging3,.image_lodging4,
@@ -386,7 +387,7 @@ h1 {
     padding: 2px 2px;
     border-radius: 20px;
     border: 1px solid transparent;
-    box-shadow: 0px 0px 10px 0px #0000002e;
+    box-shadow: 4px 4px 16px #0000002e;
 }
 .card_info_popular {
     width: 50%;
@@ -455,13 +456,13 @@ h1 {
 .cards_activity_1 {
     width: 48%;
     border-radius: 20px;
-    box-shadow: 0px 0px 10px 0px #0000002e;
+    box-shadow: 4px 4px 16px #0000002e;
 }
 
 .cards_activity_2 {
     width: 100%;
     border-radius: 20px;
-    box-shadow: 0px 0px 10px 0px #0000002e;
+    box-shadow: 4px 4px 16px #0000002e;
 }
  
 .card_activity_info {
