--- a/css/style.css
+++ b/css/style.css
@@ -190,6 +190,7 @@ h1 {
 
 .filter_text_icon:hover {
     transform: scale(1.03);
+    box-shadow: 4px 4px 16px #0000002e;
 }
  
 .filter_icon {
@@ -266,10 +267,6 @@ h1 {
     border-radius: 20px;
 }
 
-.cards_lodging:hover {  
-    transform: scale(1.03);
-    
-}
 
 .card_info_lodging {
     width: 100%;
@@ -287,6 +284,12 @@ h1 {
     border-radius: 20px;
     border: 4px solid transparent;
     box-shadow: 4px 4px 16px #0000002e;
+}
+
+.card_lodging_item:hover {
+    transform: scale(1.03);
+    box-shadow: 4px 4px 16px #0000004e;
+
 }
 
 .image_lodging1, .image_lodging2, .image_lodging3,.image_lodging4,
@@ -389,6 +392,12 @@ h1 {
     border: 1px solid transparent;
     box-shadow: 4px 4px 16px #0000002e;
 }
+
+.card_popular_item:hover {
+    transform: scale(1.03);
+    box-shadow: 4px 4px 16px #0000004e;
+
+}
 .card_info_popular {
     width: 50%;
     display: flex;
@@ -451,6 +460,7 @@ h1 {
 .cards_activity_1:hover , .cards_activity_2:hover {
     transform: scale(1.03);
     cursor: pointer;
+    box-shadow: 4px 4px 16px #0000004e;
 } 
 
 .cards_activity_1 {
