--- a/css/style.css
+++ b/css/style.css
@@ -119,14 +119,13 @@ h1 {
     align-items: center;
     background-color: #F2F2F2;
     border-radius: 10px 0px 0px 10px;
+    border: 1px solid transparent;
 }
 
 .search_lodging {
     height: 50px;
-    padding: 0 20px;
     border: none;
-    display: flex;
-    align-items: center;
+    text-align: center;
     font-size: 18px;
     font-weight: bold;
     color: black;
